// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/SideNav Compact 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-side-nav"
  >
    <a
      className="fd-side-nav__skip-link"
      href="#content"
    >
      Skip navigation
    </a>
    <nav
      className="fd-side-nav__main-navigation"
    >
      <ul
        className="fd-nested-list--text-only fd-nested-list--compact fd-nested-list level-1"
      >
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link is-selected"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`Storyshots Component API/SideNav Condensed 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-side-nav fd-side-nav--condensed"
  >
    <a
      className="fd-side-nav__skip-link"
      href="#content"
    >
      Skip navigation
    </a>
    <nav
      className="fd-side-nav__main-navigation"
    >
      <ul
        className="fd-nested-list level-1"
      >
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              className="fd-nested-list__icon sap-icon--home"
            />
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link is-selected"
            href="#"
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              className="fd-nested-list__icon sap-icon--cart"
            />
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              className="fd-nested-list__icon sap-icon--accept"
            />
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              className="fd-nested-list__icon sap-icon--alert"
            />
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              className="fd-nested-list__icon sap-icon--bell"
            />
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`Storyshots Component API/SideNav One Level 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-side-nav"
  >
    <a
      className="fd-side-nav__skip-link"
      href="#content"
    >
      Skip navigation
    </a>
    <nav
      className="fd-side-nav__main-navigation"
    >
      <ul
        className="fd-nested-list--text-only fd-nested-list level-1"
      >
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link is-selected"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
      </ul>
    </nav>
    <nav
      className="fd-side-nav__utility"
    >
      <ul
        aria-label="Utility Menu"
        className="fd-nested-list--text-only fd-nested-list level-1"
      >
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`Storyshots Component API/SideNav Primary 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-side-nav"
  >
    <a
      className="fd-side-nav__skip-link"
      href="#content"
    >
      Skip navigation
    </a>
    <nav
      className="fd-side-nav__main-navigation"
    >
      <ul
        className="fd-nested-list--text-only fd-nested-list level-1"
      >
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link is-selected"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`Storyshots Component API/SideNav With Icons 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-side-nav"
  >
    <a
      className="fd-side-nav__skip-link"
      href="#content"
    >
      Skip navigation
    </a>
    <nav
      className="fd-side-nav__main-navigation"
    >
      <ul
        className="fd-nested-list--text-only fd-nested-list level-1"
        data-sample="Sample"
      >
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="/"
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              className="fd-nested-list__icon sap-icon--home"
            />
            <span
              className="fd-nested-list__title"
            >
              Link item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link is-selected"
            href="/"
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              className="fd-nested-list__icon sap-icon--home"
            />
            <span
              className="fd-nested-list__title"
            >
              Link item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="/"
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              className="fd-nested-list__icon sap-icon--home"
            />
            <span
              className="fd-nested-list__title"
            >
              Link item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              className="fd-nested-list__icon sap-icon--home"
            />
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              className="fd-nested-list__icon sap-icon--home"
            />
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`Storyshots Component API/SideNav With Sub List 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-side-nav"
  >
    <a
      className="fd-side-nav__skip-link"
      href="#content"
    >
      Skip navigation
    </a>
    <nav
      className="fd-side-nav__main-navigation"
    >
      <ul
        className="fd-nested-list--text-only fd-nested-list level-1"
      >
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item 1
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <div
            className="fd-nested-list__content has-child"
            onClick={[Function]}
          >
            <a
              className="fd-nested-list__link"
              href="#"
              onClick={null}
            >
              <span
                className="fd-nested-list__title"
              >
                Link Item 2
              </span>
            </a>
            <button
              aria-controls="fd-mocked-short-id"
              aria-expanded={false}
              aria-haspopup="true"
              aria-label="Expand submenu"
              className="fd-button fd-button fd-nested-list__button"
              onClick={[Function]}
              type="button"
            />
          </div>
          <ul
            aria-expanded={false}
            aria-hidden={true}
            className="fd-nested-list--text-only fd-nested-list level-2"
            id="fd-mocked-short-id"
          >
            <li
              className="fd-nested-list__item"
            >
              <a
                className="fd-nested-list__link"
                href="#"
                onClick={[Function]}
              >
                <span
                  className="fd-nested-list__title"
                >
                  Item 1
                </span>
              </a>
            </li>
            <li
              className="fd-nested-list__item"
            >
              <a
                className="fd-nested-list__link"
                href="#"
                onClick={[Function]}
              >
                <span
                  className="fd-nested-list__title"
                >
                  Item 2
                </span>
              </a>
            </li>
            <li
              className="fd-nested-list__item"
            >
              <a
                className="fd-nested-list__link"
                href="#"
                onClick={[Function]}
              >
                <span
                  className="fd-nested-list__title"
                >
                  Item 3
                </span>
              </a>
            </li>
            <li
              className="fd-nested-list__item"
            >
              <a
                className="fd-nested-list__link"
                href="#"
                onClick={[Function]}
              >
                <span
                  className="fd-nested-list__title"
                >
                  Item 4
                </span>
              </a>
            </li>
            <li
              className="fd-nested-list__item"
            >
              <a
                className="fd-nested-list__link"
                href="#"
                onClick={[Function]}
              >
                <span
                  className="fd-nested-list__title"
                >
                  Item 5
                </span>
              </a>
            </li>
          </ul>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item 3
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <div
            className="fd-nested-list__content has-child"
            onClick={[Function]}
          >
            <a
              className="fd-nested-list__link"
              href="#"
              onClick={null}
            >
              <span
                className="fd-nested-list__title"
              >
                Link Item 4
              </span>
            </a>
            <button
              aria-controls="fd-mocked-short-id"
              aria-expanded={false}
              aria-haspopup="true"
              aria-label="Expand submenu"
              className="fd-button fd-button fd-nested-list__button"
              onClick={[Function]}
              type="button"
            />
          </div>
          <ul
            aria-expanded={false}
            aria-hidden={true}
            className="fd-nested-list--text-only fd-nested-list level-2"
            id="fd-mocked-short-id"
          >
            <li
              className="fd-nested-list__item"
            >
              <a
                className="fd-nested-list__link"
                href="#"
                onClick={[Function]}
              >
                <span
                  className="fd-nested-list__title"
                >
                  Item 1
                </span>
              </a>
            </li>
            <li
              className="fd-nested-list__item"
            >
              <a
                className="fd-nested-list__link"
                href="#"
                onClick={[Function]}
              >
                <span
                  className="fd-nested-list__title"
                >
                  Item 2
                </span>
              </a>
            </li>
            <li
              className="fd-nested-list__item"
            >
              <a
                className="fd-nested-list__link"
                href="#"
                onClick={[Function]}
              >
                <span
                  className="fd-nested-list__title"
                >
                  Item 3
                </span>
              </a>
            </li>
            <li
              className="fd-nested-list__item"
            >
              <a
                className="fd-nested-list__link"
                href="#"
                onClick={[Function]}
              >
                <span
                  className="fd-nested-list__title"
                >
                  Item 4
                </span>
              </a>
            </li>
          </ul>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`Storyshots Component API/SideNav With Title 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-side-nav"
  >
    <a
      className="fd-side-nav__skip-link"
      href="#content"
    >
      Skip navigation
    </a>
    <nav
      className="fd-side-nav__main-navigation"
    >
      <ul
        className="fd-nested-list--text-only fd-nested-list level-1"
      >
        <li
          className="fd-nested-list__group-header"
        >
          Group Title
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link is-selected"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
      </ul>
    </nav>
    <nav
      className="fd-side-nav__main-navigation"
    >
      <ul
        className="fd-nested-list--text-only fd-nested-list level-1"
      >
        <li
          className="fd-nested-list__group-header"
        >
          Group Title
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Link Item
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;
